# sample-apps

./: README.md
capturev4l2/: .gitignore  atomisp.h  atomisp_obj.cpp  atomisp_obj.h  capture.cpp  makefile  v4l2_obj.cpp  v4l2_obj.h
hd-camera/: hd-camera-build.sh  hd-camera.cpp
optical-flow/: README.md  aero_flow_v4l2.cpp
ros/: .clang-format  .gitignore  AUTHORS  LICENSE  README.md
ros/src/aero_flight_modes/: CMakeLists.txt  Makefile  package.xml
ros/src/aero_flight_modes/aero_flight_modes/: Makefile
ros/src/aero_flight_modes/aero_flight_modes/src/: aero_drone_flight_modes.cpp
ros/src/aero_flight_modes/debian/: changelog  control  ros-kinetic-aero-flight-modes.install  rules
ros/src/aero_flight_modes/include/: aero_drone_flight_modes.h
ros/src/aero_flight_modes/launch/: aero_flight_modes.launch
ros/src/aero_flight_modes/src/: aero_drone_flight_modes.cpp  aero_flight_modes_node.cpp
ros/src/aero_fly_mission/: CMakeLists.txt  Makefile  package.xml
ros/src/aero_fly_mission/aero_fly_mission/: Makefile
ros/src/aero_fly_mission/debian/: changelog  control  ros-kinetic-aero-fly-mission.install  rules
ros/src/aero_fly_mission/launch/: aero_fly_mission.launch
ros/src/aero_fly_mission/src/: aero_fly_mission_node.cpp
ros/src/aero_offboard_ctrl/: CMakeLists.txt  Makefile  package.xml
ros/src/aero_offboard_ctrl/aero_offboard_ctrl/: Makefile
ros/src/aero_offboard_ctrl/debian/: changelog  control  ros-kinetic-aero-offboard-ctrl.install  rules
ros/src/aero_offboard_ctrl/launch/: aero_offboard_ctrl.launch
ros/src/aero_offboard_ctrl/src/: aero_offboard_ctrl_node.cpp
ros/src/aero_offboard_velocity/: CMakeLists.txt  package.xml
ros/src/aero_offboard_velocity/include/: aero_drone_action.h  aero_drone_offboard.h
ros/src/aero_offboard_velocity/launch/: aero_offboard_velocity.launch
ros/src/aero_offboard_velocity/src/: aero_drone_action.cpp  aero_drone_offboard.cpp  aero_offboard_velocity_node.cpp
ros/src/aero_takeoff_land/: CMakeLists.txt  Makefile  package.xml
ros/src/aero_takeoff_land/aero_takeoff_land/: Makefile
ros/src/aero_takeoff_land/aero_takeoff_land/debian/: ros-kinetic-aero-takeoff-land.install
ros/src/aero_takeoff_land/aero_takeoff_land/src/: aero_takeoff_land_node.cpp
ros/src/aero_takeoff_land/debian/: changelog  control  rules
ros/src/aero_takeoff_land/include/: aero_drone.h  aero_drone_action.h
ros/src/aero_takeoff_land/launch/: aero_takeoff_land.launch
ros/src/aero_takeoff_land/src/: aero_drone.cpp  aero_drone_action.cpp  aero_takeoff_land_node.cpp
ros/src/aero_telemetry_simple/: CMakeLists.txt  Makefile  package.xml
ros/src/aero_telemetry_simple/aero_telemetry_simple/: Makefile
ros/src/aero_telemetry_simple/aero_telemetry_simple/debian/: ros-kinetic-aero-telemetry-simple.install
ros/src/aero_telemetry_simple/debian/: changelog  control  rules
ros/src/aero_telemetry_simple/include/: aero_drone_telemetry.h
ros/src/aero_telemetry_simple/launch/: aero_telemetry_simple.launch
ros/src/aero_telemetry_simple/src/: aero_drone_telemetry.cpp  aero_telemetry_simple_node.cpp
ros/src/mavros_fly_mission/: CMakeLists.txt  package.xml
ros/src/mavros_fly_mission/src/: mavros_fly_mission_node.cpp
ros/src/mavros_offboard_ctrl/: CMakeLists.txt  package.xml
ros/src/mavros_offboard_ctrl/src/: mavros_offboard_ctrl_node.cpp
ros/src/mavros_takeoff_land/: CMakeLists.txt  package.xml
ros/src/mavros_takeoff_land/src/: mavros_takeoff_land_node.cpp
ros/src/mavros_telemetry_modes/: CMakeLists.txt  package.xml
ros/src/mavros_telemetry_modes/src/: mavros_telemetry_modes_node.cpp
ros/src/mavros_telemetry_simple/: CMakeLists.txt  package.xml
ros/src/mavros_telemetry_simple/src/: mavros_telemetry_simple_node.cpp
spidev-app/: spi_xfer.c
