<?xml version="1.0"?>
<package>
  <name>aero_fly_mission</name>
  <version>0.0.0</version>
  <description>  Demonstration of Flying missions of Intel Aero using MAVROS.</description>
  <maintainer email="shakthi.prashanth.m@intel.com">Shakthi Prashanth M</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
