<?xml version="1.0"?>
<package>
  <name>aero_offboard_ctrl</name>
  <version>0.0.0</version>
  <description>Offboard control of the Aero FC using MAVROS</description>

  <maintainer email="shakthi.prashanth.m@intel.com">Shakthi Prashanth M</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
