<?xml version="1.0"?>
<package>
  
<name>aero_offboard_velocity</name>
<version>0.0.0</version>
<description>Demonstration of offboard velocity in local ned and body frame on intel aero using mavros bridge.</description>

<maintainer email="padmashree.mandri@intel.com">Padmashree Mandri</maintainer>

<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>std_msgs</run_depend>

</package>
