<?xml version="1.0"?>
<package>
  
<name>aero_offboard_velocity</name>
<version>0.1.0</version>
<description>Demonstration of offboard velocity in local NED and Body frame on Intel Aero using mavros bridge.</description>

<maintainer email="padmashree.mandri@intel.com">Padmashree Mandri</maintainer>

<license> BSD 3-Clause </license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>std_msgs</run_depend>

</package>
