<?xml version="1.0"?>
<package>
<name>aero_takeoff_land</name>
<version>0.0.0</version>
<description> Demonstration of takeoff and land on Intel Aero using MAVROS bridge.</description>

<maintainer email="shakthi.prashanth.m@intel.com">Shakthi Prashanth M</maintainer>
<maintainer email="padmashree.mandri@intel.com">Padmashree Mandri</maintainer>

<license> BSD 3-Clause </license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>mavros_msgs</build_depend>
<build_depend>roscpp</build_depend>
<run_depend>mavros_msgs</run_depend>
<run_depend>roscpp</run_depend>

</package>
