<?xml version="1.0"?>
<package>
<name>aero_telemetry_simple</name>
<version>0.1.0</version>
<description> Demonstration of reading Telemetry info of Intel Aero Flight Controller using MAVROS bridge.</description>

<maintainer email="shakthi.prashanth.m@intel.com">Shakthi Prashanth M</maintainer>
<maintainer email="padmashree.mandri@intel.com">Padmashree Mandri</maintainer>

<license> BSD 3-Clause </license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>mavros_msgs</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>std_msgs</build_depend>

<run_depend>geometry_msgs</run_depend>
<run_depend>mavros_msgs</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>std_msgs</run_depend>

</package>
